// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render with given styles 1`] = `
<ForwardRef(View)
  style={
    Object {
      "padding": 10,
    }
  }
>
  <ForwardRef(View) />
</ForwardRef(View)>
`;

exports[`Column component should render with no styles 1`] = `
<ForwardRef(View)
  style={Object {}}
>
  <ForwardRef(View) />
</ForwardRef(View)>
`;
